<resources>
    <string name="facebook_app_id">1354350021301053</string>
    <string name="app_name">RemoteService</string>
    <string name="act_splash_app_name">TPlayer</string>

    <!--title tab online-->
    <string name="tab_title_hot">Hot Music</string>
    <string name="tab_title_charts">Charts Music</string>
    <string name="tab_title_top">Top Music</string>
    <string name="tab_title_album">Album</string>

    <!--fragment online hot-->
    <string name="title_group_album">Album</string>
    <string name="title_group_topic">New</string>
    <string name="title_group_hightlight">Hight Light Songs</string>

    <!--fragment online top-->
    <string name="title_group_vietnam">Vietnam</string>
    <string name="title_group_national">National</string>

    <string name="vietnam_music_name_type_young">Nhạc trẻ</string>
    <string name="vietnam_music_name_type_bolero">Nhạc trữ tình</string>
    <string name="vietnam_music_name_type_dance">Nhạc dance</string>
    <string name="vietnam_music_name_type_rock">Nhạc rock</string>
    <string name="vietnam_music_name_type_rap">Nhạc rap</string>
    <string name="vietnam_music_name_type_trinhcongson">Nhạc Trịnh</string>

    <string name="national_music_name_type_japan">J-pop</string>
    <string name="national_music_name_type_kpop">K-pop</string>
    <string name="national_music_name_type_pop">Pop</string>
    <string name="national_music_name_type_edm">EDM</string>
    <string name="national_music_name_type_rock">Rock</string>
    <string name="national_music_name_type_rap">Rap</string>

    <string name="fragment_title_top_music_vietnam">Top music Vietnam</string>
    <string name="fragment_title_top_music_national">Top music National</string>

    <string name="fragment_title_hot_music_album">Album hot</string>
    <string name="fragment_title_hot_music_new">New</string>
    <string name="fragment_title_hot_music_hightlight">Hight light</string>

    <string name="fragment_title_charts_vietnam">Charts Vietnam</string>
    <string name="fragment_title_charts_usuk">Charts US-UK</string>

    <string name="fragment_title_album_vietnam">Albums Vietnam</string>
    <string name="fragment_title_album_national">Albums National</string>

    <string name="act_offline_item_song">Songs</string>
    <string name="act_offline_item_albums">Albums</string>
    <string name="act_offline_item_artists">Artists</string>
    <string name="act_offline_item_playlists">Playlists</string>
    <string name="act_offline_item_folder">Folder</string>
    <string name="act_offline_item_download">Download</string>
    <string name="act_offline_title_menu_search">Search</string>
    <string name="act_offline_title_menu_rescan">Re-Scan</string>
    <string name="act_offline_title_menu_volume">Volume</string>
    <string name="act_offline_title_menu_timer">Timer</string>
    <string name="act_offline_title_menu_equalizer">Equalizer</string>
    <string name="act_offline_title_menu_setting">Setting</string>
    <string name="act_offline_title_menu_about">About</string>

    <string name="fragment_offline_title_songs">Songs</string>
    <string name="fragment_offline_title_albums">Albums</string>
    <string name="fragment_offline_title_artist">Artist</string>
    <string name="fragment_offline_title_playlists">Playlists</string>
    <string name="fragment_offline_title_folder">Folder</string>
    <string name="fragment_offline_title_download">Download</string>


    <string name="context_menu_song_first_now_playings">Add First Now Playing</string>
    <string name="context_menu_song_now_playings">Add now playing</string>
    <string name="context_menu_song_to_playlist">Add to playlist</string>
    <string name="context_menu_song_set_rington">Set as rington</string>
    <string name="context_menu_song_delete">Delete</string>

    <string name="context_menu_album_play">Play</string>
    <string name="context_menu_album_shuffle">Play Shuffle</string>
    <string name="context_menu_album_add_now_playing">Add now playing</string>
    <string name="context_menu_album_add_playlist">Add to playlist</string>

    <string name="context_menu_download_first_now_playings">Add First Now Playing</string>
    <string name="context_menu_download_now_playings">Add now playing</string>
    <string name="context_menu_download_to_playlist">Add to playlist</string>
    <string name="context_menu_download_set_rington">Set as rington</string>
    <string name="context_menu_download_delete_in_download">Delete in download</string>
    <string name="context_menu_download_delete">Delete</string>

    <string name="context_menu_playlist_play">Play</string>
    <string name="context_menu_playlist_add_now_playing">Add now playing</string>
    <string name="context_menu_playlist_rename">Rename</string>
    <string name="context_menu_playlist_delete">Delete</string>

    <string name="context_menu_folder_play">Play</string>
    <string name="context_menu_folder_shuffle">Play Shuffle</string>
    <string name="context_menu_folder_add_now_playing">Add now playing</string>
    <string name="context_menu_folder_add_playlist">Add to playlist</string>
    <string name="context_menu_folder_hide">Hide</string>
    <string name="act_offline_rescan">Music is not synchronized, please scan again to sync</string>
    <string name="dialog_add_playlist">Add playlists</string>
    <string name="dialog_create_new_playlist">Create new playlist</string>
    <string name="dialog_add_playlist_add_fail">Add fail</string>
    <string name="dialog_add_playlist_add_success">Add success</string>
    <string name="dialog_add_playlist_name_not_null">Enter name of new Playlist</string>
    <string name="dialog_confirm_delete">Do you want to delete this song ?</string>
    <string name="dialog_confirm_delete_title">Delete</string>
    <string name="dialog_confirm_delete_success">Delete success</string>
    <string name="dialog_confirm_delete_fail">Delete fail</string>
    <string name="set_ring_tone">Song save as rington</string>
    <string name="dialog_playlist_rename">Rename playlist</string>
    <string name="dialog_playlist_rename_success">Rename success</string>
    <string name="dialog_playlist_rename_fail">Rename fail</string>
    <string name="dialog_playlist_rename_empty">Enter new name for playlists</string>
    <string name="dialog_playlist_delete">Delete playlist</string>
    <string name="dialog_playlist_delete_msg">Do you sure delete this playlist</string>
    <string name="dialog_playlist_delete_fail">Delete fail</string>
    <string name="dialog_playlist_delete_success">Delete success</string>
    <string name="dialog_confirm_go_to_setting">Request permission</string>
    <string name="dialog_confirm_go_to_setting_request">Please go to setting and grant permission for this application</string>
    <string name="context_menu_album_add_end_playing">Add to end playlist</string>
    <string name="network_not_available">Network not available !</string>
    <string name="activity_share_title_toolbar">Share</string>
    <string name="tab_title_search">Search</string>

    <string name="setting_language">Language</string>
    <string name="setting_equalizer">Equalizer</string>
    <string name="setting_download">Download only wifi</string>
    <string name="setting_shake">Shake to change song</string>
    <string name="setting_pause_when_disable_headset">Pause when disable headset</string>
    <string name="setting_continued_when_enable_headset">Continue when enable headset</string>
    <string name="setting_pause_when_other_sound_play">Pause when other sounds comming</string>
    <string name="title_activity_offline">Music Local</string>
    <string name="title_activity_offline_tab_title" >Song</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="title_activity_share" />
    <string name="download_only_wifi">Download only wifi connect</string>


</resources>
