<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">

        <training.com.tplayer.custom.TextViewRoboto
            android:id="@+id/textViewRobotoVietnam"
            style="@style/TextTitleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_group_vietnam"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textFonts="RobotoBold" />

        <LinearLayout
            android:clickable="true"

            android:id="@+id/vietnam_young"
            style="@style/LayoutItemTopMusic"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRobotoVietnam">

            <ImageView
                android:background="?attr/selectableItemBackground"
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_vietnam_young" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vietnam_music_name_type_young"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vietnam_rap"
            style="@style/LayoutItemTopMusic"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/vietnam_young"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/vietnam_young"
            app:layout_constraintTop_toTopOf="@+id/vietnam_young"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_vietnam_rap" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vietnam_music_name_type_rap"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vietnam_dance"
            style="@style/LayoutItemTopMusic"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/vietnam_young"
            app:layout_constraintLeft_toRightOf="@+id/vietnam_young"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vietnam_young"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_vietnam_dance" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vietnam_music_name_type_dance"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vietnam_bolero"
            style="@style/LayoutItemTopMusic"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="@+id/vietnam_young"
            app:layout_constraintRight_toRightOf="@+id/vietnam_young"
            app:layout_constraintTop_toBottomOf="@+id/vietnam_young">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_vietnam_bolero" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vietnam_music_name_type_bolero"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vietnam_trinh"
            style="@style/LayoutItemTopMusic"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/vietnam_bolero"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/vietnam_rap"
            app:layout_constraintRight_toRightOf="@+id/vietnam_rap"
            app:layout_constraintTop_toTopOf="@+id/vietnam_bolero"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_vietnam_trinhcongson" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vietnam_music_name_type_trinhcongson"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vietnam_rock"
            style="@style/LayoutItemTopMusic"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/vietnam_bolero"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/vietnam_dance"
            app:layout_constraintRight_toRightOf="@+id/vietnam_dance"
            app:layout_constraintTop_toTopOf="@+id/vietnam_bolero"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_vietnam_rock" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vietnam_music_name_type_rock"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <training.com.tplayer.custom.TextViewRoboto
            android:id="@+id/textViewRobotoNational"
            style="@style/TextTitleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/title_group_national"
            app:layout_constraintLeft_toLeftOf="@+id/textViewRobotoVietnam"
            app:layout_constraintTop_toBottomOf="@+id/vietnam_bolero"
            app:textFonts="RobotoBold" />

        <LinearLayout
            android:id="@+id/national_pop"
            style="@style/LayoutItemTopMusic"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/vietnam_bolero"
            app:layout_constraintRight_toRightOf="@+id/vietnam_bolero"
            app:layout_constraintTop_toBottomOf="@+id/textViewRobotoNational">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_nation_pop" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/national_music_name_type_pop"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/national_kpop"
            style="@style/LayoutItemTopMusic"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/national_pop"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/vietnam_trinh"
            app:layout_constraintRight_toRightOf="@+id/vietnam_trinh"
            app:layout_constraintTop_toTopOf="@+id/national_pop">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_national_kpop" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/national_music_name_type_kpop"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/national_edm"
            style="@style/LayoutItemTopMusic"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/national_pop"
            app:layout_constraintLeft_toLeftOf="@+id/vietnam_rock"
            app:layout_constraintRight_toRightOf="@+id/vietnam_rock"
            app:layout_constraintTop_toTopOf="@+id/national_pop"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_national_edm" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/national_music_name_type_edm"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/national_rock"
            style="@style/LayoutItemTopMusic"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/national_pop"
            app:layout_constraintRight_toRightOf="@+id/national_pop"
            app:layout_constraintTop_toBottomOf="@+id/national_pop">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_national_rock" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/national_music_name_type_rock"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nation_rap"
            style="@style/LayoutItemTopMusic"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/national_rock"
            app:layout_constraintLeft_toLeftOf="@+id/national_kpop"
            app:layout_constraintTop_toTopOf="@+id/national_rock"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_national_rap" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/national_music_name_type_rap"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nation_japan"
            style="@style/LayoutItemTopMusic"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/national_rock"
            app:layout_constraintLeft_toLeftOf="@+id/national_edm"
            app:layout_constraintTop_toTopOf="@+id/national_rock"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_item_music_national_japan" />

            <training.com.tplayer.custom.TextViewRoboto
                style="@style/TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/national_music_name_type_japan"
                app:textFonts="RobotoMedium" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
